--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -26,6 +26,7 @@ body{
 
 header {
     background-image: linear-gradient(#37C777, rgba(0, 0, 0, 0.616));
+    min-height: 150px;
     width: auto;
     padding: 20px;
     margin: 0px;
