--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -50,7 +50,7 @@ header > p {
     padding-right: 10px;
     padding-left: 10px;
     margin: auto;
-    margin-bottom: 20px;
+    padding-bottom: 20px;
     text-shadow: 1px 2px 7px rgba(0, 0, 0, 0.521);
 }
 
